

# Installing MetaStuff headers

install_headers(
    'MetaStuff/include/detail/MetaHolder.h',
    'MetaStuff/include/detail/template_helpers.h',
    'MetaStuff/include/detail/template_helpers.inl',
    subdir : 'zzzlib/detail'
)
install_headers(
    'MetaStuff/include/Member.h',
    'MetaStuff/include/Member.inl',
    'MetaStuff/include/Meta.h',
    'MetaStuff/include/Meta.inl',
    subdir : 'zzzlib'
)